# AI-Memory-Vault

./: .dockerignore  .gitignore  README.md  build-final.txt  build-output.txt  build-v2.txt  build2.txt  docker-compose.yml  help-out.txt  mcp_server.spec  rebuild-installer.txt
.obsidian/: app.json  (+2 more)
AI_Engine/: .env.example  Dockerfile  auto_tasks.ps1  config.json  config.json.bak  config.py  e2e_test.py  main.py  pyproject.toml  requirements-lock.txt  requirements.txt  setup-menu.ps1  setup_regression_test.py  tasks.json  test_exe_mcp.py  vault_meta.json  排程管理.bat  環境設定.bat
AI_Engine/cli/: __init__.py  registry.py  repl.py  setup_commands.py
AI_Engine/core/: __init__.py  embeddings.py  errors.py  frontmatter.py  indexer.py  llm.py  logger.py  migration.py  retriever.py  vectorstore.py
AI_Engine/mcp_app/: __init__.py  server.py  utils.py
AI_Engine/packaging/: build-all.ps1  build-installer.ps1  build.ps1  build.spec  installer.iss
AI_Engine/scripts/: auto_tasks.ps1  scheduler-menu.ps1  setup-menu.ps1
AI_Engine/services/: __init__.py  agent_router.py  auto_scheduler.py  backup.py  git_service.py  instinct.py  knowledge_extractor.py  scheduler.py  session_extractor.py  setup.py  token_counter.py  vault.py
AI_Engine/tests/: __init__.py  conftest.py  test_auto_learn_hooks.py  test_backup.py  test_clean_orphans.py  test_cli_reindex.py  test_knowledge_extractor.py  test_list_notes.py  test_migration.py  test_rename_note.py  test_retriever.py  test_scheduler.py  test_server_tools.py  test_sse_transport.py  test_vault_service.py
AI_Engine/tools/: registry.py
(+328 files in other folders)
