[project]
name = "ai-memory-vault"
version = "3.7.0"
description = "AI-driven personal knowledge management system with RAG and MCP"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-chroma>=0.2.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "SQLAlchemy>=2.0.0",
    "rank_bm25>=0.2.0",
    "mcp[cli]>=1.0.0",
    "apscheduler>=3.10",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pyinstaller>=6.0",
]

[tool.setuptools]
packages = ["core", "services", "mcp_app", "cli", "tools"]

[tool.setuptools.package-data]
"*" = ["*.md"]

[tool.setuptools.exclude-package-data]
"*" = [
    "*.ps1",
    "*.bat",
    "e2e_test.py",
    "setup_regression_test.py",
    "tasks.json",
    "config.json",
    "config.json.bak",
    "requirements-lock.txt",
    "scheduler.log",
    "record_manager_cache.sql",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
